--- a/src/components/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.module.css
@@ -65,7 +65,6 @@
 	gap: 3px;
 	cursor: pointer;
 	transition: 0.3s all ease;
-	/* padding: 15px; */
 }
 
 .more-info:hover {
@@ -74,5 +73,8 @@
 
 .profile-description {
 	font-size: 16px;
+	text-wrap: wrap;
+	word-wrap: break-word;
+	padding-inline: 15px;
 	color: var(--secondary-text-color);
 }
