--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -1,15 +1,14 @@
 .button {
-	color: black;
-	font-weight: 500;
-	font-size: 18px;
-	background-color: rgb(201, 201, 201);
-	border-radius: 8px;
-	padding-inline: 15px;
-	padding-block: 5px;
-	border: none;
-	cursor: pointer;
-	transition: .3s all ease;
+	transition: 0.3s all ease;
 	margin: 15px;
+	padding-inline: 20px;
+	border-radius: 10px;
+	border: none;
+	padding-block: 8px;
+	box-shadow: 0 0 0.4vw rgba(0, 0, 0, 0.5), 0 0 0 0.15vw transparent;
+	font-size: 16px;
+	font-weight: bold;
+	cursor: pointer;
 }
 
 .button:hover {
