--- a/src/components/Label/InputLabel.module.css
+++ b/src/components/Label/InputLabel.module.css
@@ -1,3 +1,12 @@
+.input-container {
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	gap: 10px;
+}
+
 .input,
 .input[type='date'] {
 	font-weight: 500;
@@ -7,11 +16,11 @@
 	box-shadow: 0 0 0.4vw rgba(0, 0, 0, 0.5), 0 0 0 0.15vw transparent;
 	border-radius: 0.4vw;
 	border: none;
+	/* width: 100%; */
 	outline: none;
 	padding: 0.4vw;
 	box-sizing: border-box;
 	transition: 0.4s;
-	width: 100%;
 	max-width: 220px;
 }
 
