--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -1,6 +1,6 @@
 .modal {
 	background-color: rgba(0, 0, 0, 0.5);
-	width: 100vw;
+	width: 100%;
 	z-index: 2;
 	height: 100vh;
 	position: fixed;
@@ -22,14 +22,21 @@
 .modal__content {
 	background-color: var(--background-secondary-color);
 	min-width: 35%;
+	max-width: 50%;
 	color: white;
-
 	text-align: end;
 	border-radius: 22px;
 	padding: 5px;
 	transform: scale(0.6);
 	transition: 0.2s;
+	overflow-y:scroll;
+	max-height: 85%;
 }
+
+.modal__content::-webkit-scrollbar {
+	display: none;
+}
+
 
 .modal__content h2 {
 	text-align: center;
@@ -37,9 +44,4 @@
 
 .modal__content.active {
 	transform: scale(1);
-}
-
-.modal__entr {
-	min-width: 40%;
-	padding: 5px;
 }
