--- a/src/components/Posts/PostCreator/PostCreator.module.css
+++ b/src/components/Posts/PostCreator/PostCreator.module.css
@@ -16,6 +16,7 @@
 	gap: 22px;
 	padding: 25px;
 	align-items: center;
+	width: 100%;
 }
 
 .post-creator__form > div:nth-child(1) {
@@ -55,4 +56,8 @@
 	width: 75%;
 	height: 80%;
 	border-radius: 22px;
+}
+
+.img__input {
+	/* display: none; */
 }
