--- a/src/components/Posts/Post/Post.css
+++ b/src/components/Posts/Post/Post.css
@@ -35,7 +35,11 @@
 	z-index: 1;
 }
 
-.portrait img {
+.post-image__container img:hover {
+	cursor: zoom-in;
+}
+
+.book img {
 	width: 75%;
 	min-height: inherit;
 	height: auto;
@@ -47,3 +51,35 @@
 	padding: 0px;
 	height: 100%;
 }
+
+.modal__image-container {
+	width: 100%;
+	text-align: center;
+}
+
+.modal__image-container img {
+	vertical-align: middle;
+}
+
+.modal__image-container img {
+	width: 100%;
+	max-height: calc(90vh - 40px);
+	object-fit: contain;
+}
+
+/* .modal__image-container.portrait img {
+	width: 90%;
+	width: 100%;
+	max-height: calc(90vh - 40px);
+}
+
+.modal__image-container.book img {
+	width: 100%;
+	max-height: calc(90vh - 40px);
+	object-fit: contain;
+} */
+
+/* .modal__image-container.book {
+	width: 100%;
+	height: 100%;
+} */
