--- a/src/components/Posts/PostCreator/PostCreator.module.css
+++ b/src/components/Posts/PostCreator/PostCreator.module.css
@@ -2,6 +2,7 @@
 	text-align: center;
 	display: flex;
 	flex-direction: column;
+	width: 100%;
 }
 
 .post-creator__container h3 {
@@ -53,11 +54,53 @@
 }
 
 .post-creator__container .post__image {
-	width: 75%;
-	height: 80%;
+	/* width: 75%; */
+	width: 100%;
+	height: 100%;
+	object-fit: contain;
+	object-fit: cover;
 	border-radius: 22px;
+	transition: 0.3s all ease-in-out;
+	aspect-ratio: 5/5;
+	position: relative;
 }
 
-.img__input {
-	/* display: none; */
+.post__image-container {
+	height: 100%;
+	object-fit: cover;
+	width: 100%;
+	position: relative;
+	box-sizing: border-box;
+}
+
+.clear-img__button-ico {
+	transition: 0.3s all ease-in-out;
+	z-index: 5;
+	top: 0;
+	right: 0;
+	position: absolute;
+	font-size: 32px;
+	opacity: 0;
+	cursor: pointer;
+	color: rgba(255, 255, 255, 0.849);
+	padding: 2px;
+	border-radius: 50%;
+	background-color: rgb(109, 109, 109);
+}
+
+.post__image-container:hover .clear-img__button-ico {
+	opacity: 1;
+}
+
+.post__image-container:hover .post__image {
+	filter: brightness(0.6);
+}
+
+.post__images-container {
+	display: grid;
+	width: 100%;
+	height: 100%;
+	gap: 10px;
+	/* grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); */
+	grid-template-columns: repeat(3, 2fr);
 }
