--- a/src/components/Posts/Post/Post.css
+++ b/src/components/Posts/Post/Post.css
@@ -2,6 +2,7 @@
 	display: flex;
 	gap: 15px;
 	flex-direction: column;
+	position: relative;
 }
 
 .post-image__container {
@@ -12,7 +13,6 @@
 	overflow: hidden;
 	width: 100%;
 	border-radius: 22px;
-	height: auto;
 }
 
 .post-image__background {
@@ -28,28 +28,29 @@
 }
 
 .post-image__container img {
-	max-width: 100%;
+	/* max-width: 100%; */
 	/* max-height: 50%; */
 	position: relative;
 	vertical-align: middle;
-	z-index: 1;
 }
 
 .post-image__container img:hover {
-	cursor: zoom-in;
+	cursor: pointer;
 }
 
-.book img {
-	width: 75%;
-	min-height: inherit;
-	height: auto;
-	border-radius: 0;
+.post-image__container.book img {
+}
+
+.post-image__container.portrait img {
+	object-fit: contain;
 }
 
 .post-image__main-image img {
 	margin: 0px;
 	padding: 0px;
 	height: 100%;
+	height: clamp(200px, 700px, 600px);
+	width: 100%;
 }
 
 .modal__image-container {
@@ -65,6 +66,46 @@
 	width: 100%;
 	max-height: calc(90vh - 40px);
 	object-fit: contain;
+}
+
+.post-image__carousel-navigation {
+	display: flex;
+	position: absolute;
+	justify-content: space-between;
+	align-items: center;
+	width: 100%;
+	/* height: 100%; */
+	transition: 0.3s all ease;
+	pointer-events: auto;
+	transition: 0.3s all ease;
+	text-align: center;
+}
+
+.post-image__carousel-element {
+	position: absolute;
+	height: 100%;
+	align-self: center;
+	font-size: 40px;
+	color: var(--secondary-text-color);
+	transition: 0.3s all ease;
+	opacity: 0;
+}
+
+.post-image__carousel-element:nth-of-type(1) {
+	top: 0;
+	left: 0;
+}
+
+.post-image__carousel-element:nth-of-type(2) {
+	top: 0;
+	right: 0;
+}
+
+.post-image__carousel-element:hover {
+	cursor: pointer;
+	color: var(--primary-text-color);
+	opacity: 1;
+	pointer-events: auto;
 }
 
 /* .modal__image-container.portrait img {
