--- a/src/components/Posts/PostCreator/PostCreator.module.css
+++ b/src/components/Posts/PostCreator/PostCreator.module.css
@@ -29,12 +29,7 @@
 }
 
 .post-creator__card-tag {
-	text-align: left;
-	align-self: flex-start;
-	padding-left: 10px;
-	/* padding-top: 25px; */
-	/* padding-bottom: 10px; */
-	/* padding: 25px; */
+	width: 100%;
 }
 
 .post-creator__card-description {
@@ -145,4 +140,40 @@
 
 .post-creator__label svg {
 	font-size: 4rem;
+}
+
+.tags-input-container {
+	padding: 0.5em;
+	display: flex;
+	flex-wrap: wrap;
+	max-width: 100%;
+	gap: 0.5em;
+}
+
+.tag-item {
+	background-color: rgb(218, 216, 216);
+	display: inline-block;
+	padding: 0.2em 0.5em;
+	border-radius: 20px;
+	color: rgb(48, 48, 48);
+}
+.tag-item .close {
+	height: 20px;
+	width: 20px;
+	background-color: rgb(48, 48, 48);
+	color: #fff;
+	border-radius: 50%;
+	display: inline-flex;
+	justify-content: center;
+	align-items: center;
+	margin-left: 0.5em;
+	font-size: 18px;
+	cursor: pointer;
+}
+
+.tags-input {
+	flex-grow: 1;
+	padding: 0.5em 0;
+	border: none;
+	outline: none;
 }
