--- a/src/components/Label/InputLabel.module.css
+++ b/src/components/Label/InputLabel.module.css
@@ -16,7 +16,7 @@
 	box-shadow: 0 0 0.4vw rgba(0, 0, 0, 0.5), 0 0 0 0.15vw transparent;
 	border-radius: 0.4vw;
 	border: none;
-	/* width: 100%; */
+	width: 100%;
 	outline: none;
 	padding: 0.4vw;
 	box-sizing: border-box;
@@ -40,4 +40,14 @@
 	border-radius: 7px;
 	padding: 5px;
 	cursor: pointer;
+}
+
+@media (max-width: 920px) {
+	.input[type='date'] {
+		width: 80%;
+	}
+
+	.description textarea {
+		font-size: 12px;
+	}
 }
