--- a/src/components/Carousel/Carousel.css
+++ b/src/components/Carousel/Carousel.css
@@ -1,10 +1,85 @@
-.carousel-container {
+.carousel-indicators__wrapper {
+	width: 100%;
+	padding-bottom: 0.35em;
+	position: absolute;
+	bottom: 0;
 	display: flex;
-	flex-direction: row;
-	gap: 15px;
-	list-style: none;
+	justify-content: center;
+	align-items: end;
+	transition: 0.2s all ease;
+	opacity: 1;
 }
 
-.carousel-container li {
-	background-color: red;
+.carousel-indicators__container {
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.486);
+	display: flex;
+	border-radius: 12px;
+}
+
+.carousel-indicator {
+	transition: 0.3s all ease-in-out;
+}
+div:hover ~ .carousel-indicators__wrapper {
+	opacity: 0;
+}
+
+.carousel-indicator-active {
+	opacity: 1;
+	transform: scale(1.15) translateZ(0);
+	transition: transform 0.15s, opacity 0.2s ease-in-out;
+}
+
+@keyframes fadeInScale {
+	0% {
+		opacity: 0;
+		transform: scale(0.85) translateZ(0);
+	}
+	25% {
+		opacity: 0.3;
+	}
+	50% {
+		opacity: 0.7;
+		transform: scale(1) translateZ(0);
+	}
+	100% {
+		opacity: 1;
+		transform: scale(1.15) translateZ(0);
+	}
+}
+
+.carousel-indicator-active {
+	animation: fadeInScale 0.2s forwards;
+}
+
+.post-image__carousel-element {
+	position: absolute;
+	height: 100%;
+	align-self: center;
+	font-size: 40px;
+	color: var(--secondary-text-color);
+	transition: 0.3s all ease;
+	opacity: 0;
+	filter: drop-shadow(1px 1px 1px rgba(0, 0, 0, 0.603));
+}
+
+.post-image__carousel-element:nth-of-type(1) {
+	top: 0;
+	left: 0;
+}
+
+.post-image__carousel-element:nth-of-type(2) {
+	top: 0;
+	right: 0;
+}
+
+.post-image__carousel-element:hover {
+	cursor: pointer;
+	color: var(--primary-text-color);
+	opacity: 1;
+	pointer-events: visible;
+}
+
+.post-image__container--change > div {
+	opacity: 0.4;
 }
