--- a/src/components/Profile/ProfileAdditionalInfo/ProfileAdditionalInfo.module.css
+++ b/src/components/Profile/ProfileAdditionalInfo/ProfileAdditionalInfo.module.css
@@ -3,16 +3,17 @@
 	grid-template-columns: repeat(2, 1fr);
 	text-align: center;
 	text-align: start;
-	gap: 15px;
+	gap: 25px;
 }
 
 .profile-additional-info p {
 	background-color: rgb(28, 28, 30);
 	box-shadow: 0 0 0.4vw rgba(0, 0, 0, 0.5), 0 0 0 0.15vw transparent;
 	border-radius: 12px;
-	margin: 10px;
 	padding-block: 10px;
 	font-size: 1em;
+	width: 100%;
+	margin: 0 auto;
 }
 
 .profile-data-name {
@@ -50,10 +51,37 @@
 
 .profile-info-wrapper {
 	text-align: center;
-	align-items: center;
 	border-top: 1px solid var(--secondary-text-color);
 	padding: 30px;
 	display: flex;
 	flex-direction: column;
 	gap: 20px;
+}
+
+@media (max-width: 920px) {
+	.profile-additional-info {
+		display: grid;
+		grid-template-columns: repeat(1, 1fr);
+		text-align: center;
+		text-align: start;
+		gap: 25px;
+	}
+
+	.profile-avatar-wrapper {
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		margin: 0 auto;
+		align-items: center;
+		border-bottom: 1px var(--secondary-text-color) solid;
+	}
+
+	.profile-avatar img {
+		width: inherit;
+		height: inherit;
+		border-radius: inherit;
+		object-fit: cover;
+		width: 90%;
+		height: 90%;
+	}
 }
