--- a/src/components/Posts/PostCard/PostCard.css
+++ b/src/components/Posts/PostCard/PostCard.css
@@ -22,6 +22,7 @@
 	width: 100%;
 	gap: 15px;
 	padding-bottom: 30px;
+	position: relative;
 }
 
 .post-author-date__container {
@@ -52,6 +53,10 @@
 	width: 100%;
 }
 
+.post-date {
+	word-break: break-all;
+}
+
 .post-data h6 {
 	text-align: left;
 	padding-left: 10px;
@@ -63,21 +68,64 @@
 	text-align: left;
 }
 
-.favourite-ico {
-	font-size: 32px;
+.more-info__ico {
+	font-size: 24px;
 	margin-left: auto;
 	transition: 0.2s all ease-in;
 }
 
-.favourite-ico.active {
-	color: goldenrod;
-}
-
-.favourite-ico.active:hover {
-	color: rgb(206, 170, 80);
-}
-
-.favourite-ico:hover {
+.more-info__ico:hover {
 	color: rgb(202, 202, 202);
 	cursor: pointer;
+}
+
+.post-editing-list {
+	display: flex;
+	flex-direction: column;
+	right: 0;
+	position: absolute;
+	justify-content: center;
+	list-style: none;
+	background-color: rgb(51, 51, 51);
+	padding: 10px;
+	border-radius: 15px;
+	font-weight:600;
+	margin-top: 150px;
+	z-index: 3;
+	font-size: 14px;
+	gap: 5px;
+	transition: 0.3s all ease;
+	opacity: 0;
+}
+
+.post-editing-list__list-item {
+	padding-block: 5px;
+	padding-inline: 10px;
+	border-radius: 5px;
+	transition: 0.2s all ease-in;
+	cursor: pointer;
+}
+
+.post-editing-list__list-item:hover {
+	background-color: rgba(105, 105, 105, 0.315);
+}
+
+.post-editing-list--change {
+	opacity: 1;
+}
+
+.post-editing-list__favourite-item {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 5px;
+}
+
+.post-editing-list__favourite-item svg {
+	font-size: 20px;
+	transition: .2s all ease;
+}
+
+.favourite-item__added {
+color: rgb(253, 178, 65);
 }
