--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,22 @@
 .main {
 	min-height: 100vh;
 }
+
+::-webkit-scrollbar {
+	width: 10px;
+	height: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+	background-color: #888;
+	border-radius: 5px;
+	transition: 0.3s all ease;
+}
+
+::-webkit-scrollbar-thumb:hover {
+	background-color: #555;
+}
+
+::-webkit-scrollbar-track {
+	background: var(--background-secondary-color);
+}
