--- a/src/components/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.module.css
@@ -50,18 +50,42 @@
 	position: absolute;
 	margin: 15px;
 	padding: 7px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	border-radius: 9px;
-	background-color: rgba(0, 0, 0, 0.692);
 	opacity: 0;
 	transition: 0.3s all ease-out;
-	width: 25px;
-	height: 25px;
+	width: 100%;
 }
 
-.background-wrapper img:hover {
+.banner-menu-overlay {
+	border-radius: 9px;
+	display: flex;
+	flex-direction: column;
+	gap: 5px;
+	list-style: none;
+}
+
+.banner-menu-item {
+	display: flex;
+
+	gap: 5px;
+	color: white;
+	font-size: clamp(12px, 15px, 18px);
+	font-weight: 400;
+	padding: 4px;
+}
+
+.banner-menu-item:hover {
+	cursor: pointer;
+	background-color: rgba(99, 98, 98, 0.699);
+}
+
+.banner-menu-item label {
+	cursor: pointer;
+	display: flex;
+	gap: 5px;
+}
+
+.background-wrapper:hover img,
+.background-wrapper .change-background-overlay:hover img {
 	filter: brightness(0.6);
 }
 
@@ -71,8 +95,11 @@
 
 .change-background-ico {
 	color: white;
-	font-size: 25px;
-	cursor: pointer;
+	font-size: 1.5em;
+}
+
+.banner-menu-item:nth-of-type(2) .change-background-ico {
+	color: rgb(236, 72, 72);
 }
 
 .avatar-wrapper {
@@ -80,6 +107,13 @@
 	display: flex;
 	justify-content: center;
 	z-index: 2;
+}
+
+.input-avatar {
+	padding: 0px;
+	margin: 0px;
+	width: 100%;
+	height: 100%;
 }
 
 .avatar {
@@ -105,17 +139,23 @@
 	position: absolute;
 	top: 0;
 	left: 0;
-	width: 100%;
-	height: 100%;
-	font-size: 40px;
+	font-size: 2.2rem;
 	color: var(--primary-text-color);
 	display: flex;
 	justify-content: center;
+	width: 100%;
+	height: 100%;
 	align-items: center;
-	flex-direction: column;
 	border-radius: inherit;
 	transition: 0.3s all ease-out;
 	opacity: 0;
+}
+
+.grid {
+	display: grid;
+	gap: 25px;
+	text-align: center;
+	grid-template-columns: repeat(2, 1fr);
 }
 
 .profile-name {
@@ -194,6 +234,11 @@
 
 .change-avatar-ico {
 	cursor: pointer;
+	font-size: 1em;
+}
+
+.change-avatar-overlay label:nth-of-type(2) {
+	color: rgb(235, 98, 98);
 }
 
 .change-avatar-overlay input {
